multipainter/src/Community/Community.css
@font-face {
  font-family: 'PixelOperatorBold';
  src: url('../assets/Fonts/PixelOperator8-Bold.ttf') format('truetype');
}

/* Styles for the Community Container */
.community-container {
  margin-top: 50px;
  margin-bottom: 50px;
  position: relative;
  display: flex;
  flex-direction: column; /* Make sure the container allows vertical growth */
}

.images-container {
  width: 90%;
  margin: auto;

  display: grid; /* Using grid layout */
  grid-template-columns: repeat(3, 1fr); /* Create two columns of equal width */
  gap: 50px; /* Maintain the gap between grid items */
  justify-items: center;
  justify-content: center;
}

/* Styles for Individual Image Box */
.image-box {

  outline: 7.5px solid black;
  border-radius: 5px;
  box-shadow: 0 0 35px rgba(0, 0, 0, 0.5); 
}

.image-box:hover
{
  outline-color: #d62828;
}

#communityDisplayTemplate {

  width: 100%;
  height: 100%; /* Ensure the template takes full height */

  min-width: 400px;
  min-height: 400px;

  display: grid;
}

.tooltip {
  min-width: 410px;
  min-height: 50px;

  position: absolute;
  background-color: #d62828;

  font-family: "PixelOperatorBold";
  color: black;
  font-size: x-large;

  padding: 5px;
  z-index: 10;
  opacity: 0; /* Start invisible */

  pointer-events: none; /* Prevents tooltip from interfering with mouse events */
}

.image-box:hover .tooltip {
  opacity: 1; /* Fully visible on hover */
}

